Register both Netlify forms

--- a/public/netlify-forms.html
+++ b/public/netlify-forms.html
@@ -1,10 +1,26 @@
-<form name="sourcing-desk" netlify>
-  <input type="text" name="fullName" />
-  <input type="email" name="email" />
-  <select name="requestType">
-    <option>Wholesale</option>
-    <option>Retail</option>
-  </select>
-  <input type="text" name="productName" />
-  <textarea name="description"></textarea>
-</form>
+<!DOCTYPE html>
+<html>
+  <body>
+
+    <!-- ================= Sourcing Desk Form ================= -->
+    <form name="sourcing-desk" netlify>
+      <input type="text" name="fullName" />
+      <input type="email" name="email" />
+      <select name="requestType">
+        <option>Wholesale</option>
+        <option>Retail</option>
+      </select>
+      <input type="text" name="productName" />
+      <textarea name="description"></textarea>
+    </form>
+
+    <!-- ================= Affiliate Application Form ================= -->
+    <form name="affiliate-application" netlify>
+      <input type="text" name="fullName" />
+      <input type="email" name="email" />
+      <input type="text" name="businessDescription" />
+      <textarea name="networkDetails"></textarea>
+    </form>
+
+  </body>
+</html>
